Fixed display bug in Image Card: Listing that made the image div wayyy too wide

--- a/jetstream/static/jetstream/css/blocks/column-standard.scss
+++ b/jetstream/static/jetstream/css/blocks/column-standard.scss
@@ -1,3 +1,8 @@
+@mixin IE-compatible-flex-width($width) {
+  flex: 1 1 auto;
+  width: $width;
+}
+
 @mixin gutter($width) {
   $classname: "gutter-#{$width}";
   $half: $width/2;
