--- a/jetstream/static/jetstream/css/blocks/image-panel-listing.scss
+++ b/jetstream/static/jetstream/css/blocks/image-panel-listing.scss
@@ -41,8 +41,6 @@
   }
 
   &__image {
-    @include IE-compatible-flex-width(50%);
-
     img {
       width: 100%;
       height: auto;
