--- a/jetstream/static/jetstream/css/layouts.css
+++ b/jetstream/static/jetstream/css/layouts.css
@@ -899,7 +899,7 @@
   bottom: 0;
   width: 100%;
   height: 50%;
-  background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
 }
 
 .image-carousel__item__text {
@@ -960,7 +960,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.6) 30%, rgba(0, 0, 0, 0.6));
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) 30%, rgba(0, 0, 0, 0.6));
     width: 75%;
     height: 100%;
   }
@@ -1003,7 +1003,7 @@
   height: 15px;
   margin: 0 10px;
   cursor: pointer;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   border: 1px solid #000000;
   border-radius: 10px;
 }
@@ -1025,7 +1025,7 @@
 }
 
 .hero-image-carousel__caption-title {
-  font-size: 1.7em;
+  font-size: 1.7143em;
   font-weight: bold;
   color: #ecaa00;
 }
@@ -1401,7 +1401,7 @@
   bottom: 0;
   width: 100%;
   height: 50%;
-  background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
 }
 
 .image-panel-link__title {
@@ -1563,11 +1563,6 @@
   display: block;
 }
 
-.image-panel-listing__image {
-  flex: 1 1 auto;
-  width: 50%;
-}
-
 .image-panel-listing__image img {
   width: 100%;
   height: auto;
@@ -1682,7 +1677,7 @@
   .image-panel-rollover__title {
     position: relative;
     height: 30%;
-    font-size: 1.1em;
+    font-size: 1.1429em;
   }
   .image-panel-rollover__title--vertically-centered {
     position: absolute;
@@ -1865,7 +1860,7 @@
 }
 
 .menu-listing.bg-color-dkgray .list-group-item {
-  border-bottom: 1px solid #6e6f72;
+  border-bottom: 1px solid #6d6f72;
 }
 
 .menu-listing.bg-color-dkgray .list-group-item:hover {
@@ -1874,7 +1869,7 @@
 
 .menu-listing.bg-color-dkgray .list-group-item.active {
   color: #48494b;
-  background-color: #6e6f72;
+  background-color: #6d6f72;
 }
 
 .menu-listing.bg-color-olivegreen {
@@ -2360,7 +2355,7 @@
 }
 
 .related-links.bg-color-dkgray .list-group-item {
-  border-bottom: 1px solid #6e6f72;
+  border-bottom: 1px solid #6d6f72;
 }
 
 .related-links.bg-color-dkgray .list-group-item:hover {
@@ -2369,7 +2364,7 @@
 
 .related-links.bg-color-dkgray .list-group-item.active {
   color: #48494b;
-  background-color: #6e6f72;
+  background-color: #6d6f72;
 }
 
 .related-links.bg-color-olivegreen {
